# linear_systems

./: .gitignore  CMakeLists.txt  DOCUMENTACAO.md  Makefile  README.md  TESTES_FINAL_RESUMO.md  TESTES_RESUMO.md  TESTING.md  main  programa_tcc  resultados_main.csv
build_tests/: main_tests.d  test_conjugate_gradient.d  test_matriz.d  test_vector.d
include/algebra_linear/: matriz.hpp  vector.hpp  vetor.hpp
include/metodos/: cholesky.hpp  conjugate_gradient.hpp  gauss_jordan.hpp  gauss_seidel.hpp  lu.hpp  solver_utils.hpp
include/utils/: test.hpp
plot/: plot.py
src/: main.cpp
src/algebra_linear/: matriz.cpp  matriz_identity.cpp  vector.cpp  vetor.cpp
src/bench/: bench_compare_octave.cpp  bench_fair_comparison.cpp
src/metodos/: cholesky.cpp  conjugate_gradient.cpp  gauss_jordan.cpp  gauss_seidel.cpp  lu.cpp
tests/: benchmark.cpp  test_cholesky.cpp  test_compare_all_methods.cpp  test_compare_with_octave.cpp  test_conjugate_gradient.cpp  test_gauss_jordan.cpp  test_gauss_seidel.cpp  test_lu.cpp  test_matriz.cpp  test_matriz_advanced.cpp  test_numerical_methods.cpp  test_vector.cpp  test_vector_advanced.cpp
tests/octave/: solve_system.m
